[gd_scene load_steps=5 format=2]

[ext_resource path="res://Src/Actors/Enemies/Rocket.gd" type="Script" id=1]
[ext_resource path="res://Assets/Actors/Enemies/rocket-anim.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Dying"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Flying"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[node name="Rocket" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
vframes = 2
hframes = 3
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Dying = SubResource( 1 )
anims/Flying = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -4, 5, -4, 2, -2, 1, -2, -8, 0, -10, 2, -8, 2, 1, 4, 2, 4, 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -4, 5, -4, 2, -2, 1, -2, -8, 0, -10, 2, -8, 2, 1, 4, 2, 4, 5 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
scale = Vector2( 0.538204, 0.894447 )
process_parent = true
physics_process_parent = true

[node name="FlyTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="timeout" from="FlyTimer" to="." method="_on_FlyTimer_timeout"]
